# njit-dl-project1

./: .envrc  .gitignore  environment.yaml  fetch_data_and_setup.sh  jupyter-notebook-browser  lab.sh  pyproject.toml  readme.md  requirements.txt
src/: baseline.py
