[tool.poetry]
name = "njit-dl-project1"
version = "0.1.0"
description = "njit deep learn project 1"
authors = ["Shawn Cicoria <github@cicoria.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.6.0"
torchvision = "^0.7.0"
tensorflow = "^2.3.0"
jupyterlab = "^2.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
